// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusPill > snapshot: advisory tone (GlyphOpenArc + advisory badge) 1`] = `
<div>
  <span
    style="display: inline-flex; gap: 4px; align-items: center; color: currentcolor;"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
    >
      <path
        d="M4 12 A8 8 0 0 1 20 12"
      />
    </svg>
    <span
      style="font-family: var(--font-mono); font-size: 12px; text-transform: uppercase; letter-spacing: 0.08em; padding: 3px 7px; border-radius: 3px; border-style: solid; border-width: 1px; background: color-mix(in oklab, var(--advisory) 28%, var(--paper)); color: var(--advisory-ink); border-color: color-mix(in oklab, var(--advisory) 40%, var(--paper));"
    >
      advisory
    </span>
  </span>
</div>
`;

exports[`StatusPill > snapshot: alert tone (GlyphFilledDisc + alert badge) 1`] = `
<div>
  <span
    style="display: inline-flex; gap: 4px; align-items: center; color: currentcolor;"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
    >
      <circle
        cx="12"
        cy="12"
        r="7"
      />
    </svg>
    <span
      style="font-family: var(--font-mono); font-size: 12px; text-transform: uppercase; letter-spacing: 0.08em; padding: 3px 7px; border-radius: 3px; border-style: solid; border-width: 1px; background: color-mix(in oklab, var(--alert) 14%, var(--paper)); color: var(--alert); border-color: color-mix(in oklab, var(--alert) 30%, var(--paper));"
    >
      alert
    </span>
  </span>
</div>
`;

exports[`StatusPill > snapshot: healthy tone (GlyphRingWithDot + ok badge) 1`] = `
<div>
  <span
    style="display: inline-flex; gap: 4px; align-items: center; color: currentcolor;"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
    >
      <circle
        cx="12"
        cy="12"
        r="8"
      />
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="2.5"
        stroke="none"
      />
    </svg>
    <span
      style="font-family: var(--font-mono); font-size: 12px; text-transform: uppercase; letter-spacing: 0.08em; padding: 3px 7px; border-radius: 3px; border-style: solid; border-width: 1px; background: color-mix(in oklab, var(--healthy) 14%, var(--paper)); color: var(--healthy); border-color: color-mix(in oklab, var(--healthy) 26%, var(--paper));"
    >
      healthy
    </span>
  </span>
</div>
`;
